CTstream.java: add comments about Java 9 compliance of the code which loads the Dock icon when running under Mac